--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Lasagna</h1>
     <img src="https://i.imgur.com/0HWHhWg.png" alt="">
+    <p>Lasagna (plural “lasagne”) is a flat and expanded pasta sheet, traditionally made in Italy with Parmigiano-Reggiano (Parmesan cheese), Béchamel sauce (white sauce), and ragù (a meat-based sauce). ... The dish is made by stacking lasagna sheets on top of each other with meats, vegetables, cheeses, and tomato sauce between.</p>
 </body>
 </html>
