--- a/recipes/index.html
+++ b/recipes/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/recipes/style.css">
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
+    <img src="/recipes/images/lasagna.png" alt="">
+    <br>
     <a href="/recipes/lasagna.html">Lasagna</a>
 </body>
+
 </html>
