--- a/recipes/index.html
+++ b/recipes/index.html
@@ -10,10 +10,19 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="/recipes/images/lasagna.png" alt="">
-    <br>
-    <a href="/recipes/lasagna.html">Lasagna</a>
+    <div>
+        <h1>Odin Recipes</h1>
+    </div>
+    <div>
+        <img src="/recipes/images/lasagna.png" alt="">
+        <br>
+        <a href="/recipes/lasagna.html">Lasagna</a>
+    </div>
+    <div>
+        <img src="/recipes/images/french-boeuf-bourguignon-recipe-1375523-d9ae2ba0ea394f71bc2576a3a0ea277e.jpg" alt="">
+        <br>
+        <a href="/recipes/beef.html">Boeuf bourguignon</a>
+    </div>
 </body>
 
 </html>
