--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="/recipes/style.css">
 </head>
 
 <body>
     <h1>Lasagna</h1>
-    <img src="https://i.imgur.com/0HWHhWg.png" alt="">
+    <img src="/recipes/images/lasagna.png" alt="">
     <p>Lasagna (plural “lasagne”) is a flat and expanded pasta sheet, traditionally made in Italy with
         Parmigiano-Reggiano (Parmesan cheese), Béchamel sauce (white sauce), and ragù (a meat-based sauce). ... The dish
         is made by stacking lasagna sheets on top of each other with meats, vegetables, cheeses, and tomato sauce
