--- a/recipes/index.html
+++ b/recipes/index.html
@@ -14,14 +14,13 @@
         <h1>Odin Recipes</h1>
     </div>
     <div>
-        <img src="/recipes/images/lasagna.png" alt="">
-        <br>
-        <a href="/recipes/lasagna.html">Lasagna</a>
-    </div>
-    <div>
-        <img src="/recipes/images/french-boeuf-bourguignon-recipe-1375523-d9ae2ba0ea394f71bc2576a3a0ea277e.jpg" alt="">
-        <br>
+        <ul><li>
+        <a href="/recipes/lasagna.html">Lasagna</a></li>
+        <li>
         <a href="/recipes/beef.html">Boeuf bourguignon</a>
+    </li>
+    <li><a href="/recipes/ribs.html">Garlic Braised Short Ribs With Red Wine </a></li>
+    </ul>
     </div>
 </body>
 
